tests/typechecker/should_pass/sets_of_datatypes.csp
datatype X = A | B

test1 = {A,B} <= {}

test2 = <A> < <B>
