tests/typechecker/should_fail/enumerations_1.csp
datatype A = B.Bool.{0..1}
channel c : A

X = {| c.B.0 |}
